set dialogs and centent box

--- a/CSS/dialog.css
+++ b/CSS/dialog.css
@@ -1,37 +1,44 @@
 .dialogContainer{
-    width: 100%;
-    height: 25%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 380px;
+    height: 40%;
     position: absolute;
-    bottom: 5rem; right: 1rem;
+    bottom: 0; right: 1rem;
+    background-image: url(../src/dialog.png);
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
 }
 
 .dialogBox {
-    position: absolute;
+    position: relative;
     display: flex;
     align-items: start;
     justify-content: start;
     flex-direction: column;
-    background-color: #f7f7f7;
     border-radius: 1rem;
     width: 80%;
     height: 55%;
-    padding: 1rem;
-    gap: 1rem;
+    padding: 0 1rem;
+    gap: 0.5rem;
     z-index: 10; 
-    bottom: 0; right: 0;
     font-size: 0.85rem;
-    box-shadow: 5px 5px 12px 0px rgba(243, 101, 101, 0.75);
+
 }
 
 .char {
     position: absolute;
-    width: 35%; height: 140%;
-    right: 1rem; bottom: 0;
+    width: 175px; height: 175px;
+    right: 0; top: 0;
+    translate: 12% -105%;
     z-index: 1; 
     background-image: url("../src/charactor/char1.png");
     background-position: center;
     background-size: cover;
     background-repeat: no-repeat;
+    filter: drop-shadow(0px 2px 1px  #202020);
 
 }
 
@@ -39,11 +46,12 @@
     width: 100%; height: 100%;
     background-color: transparent;
     border: none;
+    line-height: 2.7rem;
 }
 
 .tip{
     text-align: end;
     bottom: 0.5rem; right: 0.5rem;
     width: 100%;
-    font-size: 0.6rem;
+    font-size: 0.7rem;
 }
