--- a/CSS/index.css
+++ b/CSS/index.css
@@ -15,10 +15,7 @@ body {
   position: relative;
   width: 460px;
   height: 100vh;
-  background-image: url(../src/HD-wallpaper-anime-landscape-sunset-sky-scenery-reflection-water-anime.webp);
-  background-position: center;
-  background-repeat: no-repeat;
-  background-size: cover;
+  background-color: rgb(189, 189, 253);
   overflow: hidden;
 }
 
