--- a/CSS/dialog.css
+++ b/CSS/dialog.css
@@ -3,13 +3,13 @@
     align-items: center;
     justify-content: center;
     width: 380px;
-    height: 40%;
+    height: 30%;
     position: absolute;
-    bottom: 0; right: 1rem;
+    bottom: 5%; left: 50%; translate: -50% 0;
     background-image: url(../src/dialog.png);
     background-position: center;
     background-repeat: no-repeat;
-    background-size: cover;
+    background-size: 105%;
     filter: drop-shadow(5px 7px 5px  #202020);
 }
 .dialogBox {
@@ -20,19 +20,19 @@
     flex-direction: column;
     border-radius: 1rem;
     width: 80%;
-    height: 55%;
+    height: 85%;
     padding: 0 1rem;
+    margin-top: 1rem;
     gap: 0.5rem;
     z-index: 10; 
     font-size: 0.85rem;
-
 }
 
 .char {
     position: absolute;
-    width: 175px; height: 175px;
-    right: 0; top: 0;
-    translate: 12% -105%;
+    width: 120px; height: 120px;
+    right: 0; bottom: 0;
+    translate: 0 -15%;
     z-index: 1; 
     background-image: url("../src/charactor/char1.png");
     background-position: center;
@@ -54,4 +54,29 @@
     bottom: 0.5rem; right: 0.5rem;
     width: 100%;
     font-size: 0.7rem;
+}
+
+.head{
+    width: 150px; height: 150px;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+}
+
+.correct {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 150px;
+    height: 150px;
+    font-size: 10em;
+    animation: shake 0.5s ease-in-out infinite alternate;
+}
+
+@keyframes shake {
+    0% { transform: translateX(0); }
+    25% { transform: translateX(-5px) rotate(-2deg); }
+    50% { transform: translateX(5px) rotate(2deg); }
+    75% { transform: translateX(-5px) rotate(-2deg); }
+    100% { transform: translateX(5px) rotate(2deg); }
 }
